[tool.poetry]
name = "dozinator"
version = "0.1.0"
description = ""
authors = ["theo.badoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.0"
tiktoken = "^0.7.0"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"
chromadb = "^0.5.0"
openai = "^1.30.1"
streamlit = "^1.34.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
